Prevented long dates from overflowing call-item

--- a/app/client/stylus/app/call-tabs.styl
+++ b/app/client/stylus/app/call-tabs.styl
@@ -114,19 +114,21 @@
   text-align left
 #call-item-date
   text-align left
-  width 140px
+  width 100%
   top 24px
   left 8px
   background none
 #call-item-view-btn
   right 59px
   width 100px
+  z-index 100
   &:hover
     opacity 0.8
 #call-item-action-btn
   top 26px
   right 59px
   width 100px
+  z-index 100
   background green
   &:hover
     opacity 0.8
@@ -217,7 +219,7 @@
 //call view photo item
 .call-view-photo-item, .call-view-photo-item-uploaded
   width 120px
-  height auto
+  height aut
   margin-top 8.5px
   margin-left 17px
 //call view map
